<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newUserForum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context="com.example.gestionintervention.SecondFragment">

    <TextView
        android:id="@+id/compDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"

        android:gravity="center"
        android:text="@string/companyDesc"
        android:textColor="@color/colorcompDescLogin"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/geo4netLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geo4netLogo" />

    <ImageView
        android:id="@+id/geo4netLogo"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="35dp"
        android:contentDescription="@string/logoDesc"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/newUserForum"
        app:layout_constraintBottom_toTopOf="@+id/compDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/geo4net_small" />

    <LinearLayout
        android:id="@+id/inputLogin"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="135dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compDesc"
        app:layout_constraintVertical_bias="0.103">

        <EditText
            android:id="@+id/usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usernameText"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHighlight="#218180"
            android:textColorLink="#218180" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHighlight="#218180"
            android:textColorLink="#218180" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#218180"
            android:shadowColor="#785454"
            android:text="@string/login"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:gravity="center"
        android:textColor="@color/Warnings"
        app:layout_constraintBottom_toTopOf="@+id/inputLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compDesc"
        app:layout_constraintVertical_bias="0.522" />
</androidx.constraintlayout.widget.ConstraintLayout>